<resources>
    <string name="app_name">taskconnectapp</string>
    <string name="Old_password">Previous Password</string>
    <string name="welcome_to_task_connect">Welcome to Task Connect</string>
    <string name="connect_people_together">Connect People together</string>
    <string name="email_or_username">Username or Email</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="toggle_password">toggle_password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="sideicon">sideicon</string>
    <string name="back">back</string>
    <string name="please_type_something_you_ll_remember">Please Type Something you\'ll remember</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Change Password</string>
    <string name="resend_it">Resend it</string>
    <string name="didn_t_get_your_code">Didn’t Get your Code?</string>
    <string name="verify_code">Verify Code</string>
    <string name="creating_an_account">Creating an Account</string>
    <string name="step_2">Step 2</string>
    <string name="please_enter_your_email_to_reset_the_password">Please enter your email to reset the password</string>
    <string name="resetting_your_password">Resetting Your Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fixed">Fixed</string>
    <string name="change_password">Change Password</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="tasker">Tasker</string>
    <string name="_63_phone_number">+63 Phone Number</string>
    <string name="log_in">Login!</string>
    <string name="hello_world">Hello World</string>
    <string name="surname">Surname</string>
</resources>