<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sideicon"
        android:src="@drawable/side_icon"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_arrow_back"
        android:contentDescription="@string/back"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        app:tint="@color/white"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/resetting_your_password"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_email_to_reset_the_password"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btnstrokes"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/reset_password"
            android:textColor="@android:color/white" />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>