<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome_to_task_connect"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_people_together"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:layout_marginBottom="40dp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btnstrokes"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textColorLink="@color/black"
                android:textSize="16sp"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btnstrokes"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/blue"
            android:text="@string/login"
            android:textColor="@android:color/white"
            tools:ignore="VisualLintButtonSize"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="#FF000000"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="10dp"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/black" />

        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>