<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sideicon"
        android:src="@drawable/side_icon"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_arrow_back"
        android:contentDescription="@string/back"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        app:tint="@color/white"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/chnage_password"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_type_something_you_ll_remember"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:background="@color/transparent"
                android:autofillHints="password"
                android:labelFor="@id/password_input"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />

            <ImageView
                android:id="@+id/password_toggle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_visibility_off"
                android:contentDescription="@string/toggle_password" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="15dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <EditText
                android:id="@+id/confirm_password_input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:background="@color/transparent"
                android:autofillHints="password"
                android:labelFor="@id/confirm_password_input"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />

            <ImageView
                android:id="@+id/confirm_password_toggle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_visibility_off"
                android:contentDescription="@string/toggle_password" />


        </LinearLayout>

        <Button
            android:id="@+id/Update_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/blue"
            android:text="@string/update"
            android:textColor="@android:color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>