<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpVerification">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="sideicon"
        android:src="@drawable/side_icon"
        tools:ignore="HardcodedText,MissingConstraints"
        />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_arrow_back"
        android:contentDescription="@string/back"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        app:tint="@color/white"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp">

        <TextView
            android:id="@+id/creating_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/creating_an_account"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/step_2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_2"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/otp_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/otp1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/otp_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            tools:ignore="HardcodedText,LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/otp2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/otp_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            tools:ignore="HardcodedText,LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/otp3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/otp_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            tools:ignore="HardcodedText,LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/otp_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            tools:ignore="HardcodedText,LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/otp5"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/otp_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            tools:ignore="HardcodedText,LabelFor,SpeakableTextPresentCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/otp_frame">

        <Button
            android:id="@+id/verifyCodeButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/verify_code"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_get_your_code"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/resend_it"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>